--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ speed-measure-plugin.json
 
 # IDE - VSCode
 .vs
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
